--- a/css/new-age.css
+++ b/css/new-age.css
@@ -52,7 +52,7 @@ p {
 	margin-bottom: 20px;
 }
 .navbar-default {
-	background-color: white;
+	background-color: #222222;
 	border-color: rgba(34, 34, 34, 0.05);
 	-webkit-transition: all 0.35s;
 	-moz-transition: all 0.35s;
@@ -72,7 +72,7 @@ p {
 }
 .navbar-default .navbar-header .navbar-toggle {
 	font-size: 12px;
-	color: #222222;
+	color: #FFFFFF;
 	padding: 8px 10px;
 }
 .navbar-default .nav > li > a {
@@ -82,7 +82,7 @@ p {
 	font-size: 11px;
 }
 .navbar-default .nav > li > a, .navbar-default .nav > li > a:focus {
-	color: #222222;
+	color: #FFFFFF;
 }
 .navbar-default .nav > li > a:hover, .navbar-default .nav > li > a:focus:hover {
 	color: #fdcc52;
@@ -100,29 +100,29 @@ p {
 		border-color: transparent;
 	}
 	.navbar-default .navbar-header .navbar-brand {
-		color: rgba(255, 255, 255, 0.7);
+		color: #FFFFFF;
 	}
 	.navbar-default .navbar-header .navbar-brand:hover, .navbar-default .navbar-header .navbar-brand:focus {
 		color: white;
 	}
 	.navbar-default .nav > li > a, .navbar-default .nav > li > a:focus {
-		color: rgba(255, 255, 255, 0.7);
+		color: #FFFFFF;
 	}
 	.navbar-default .nav > li > a:hover, .navbar-default .nav > li > a:focus:hover {
 		color: white;
 	}
 	.navbar-default.affix {
-		background-color: white;
+		background-color: #222222;
 		border-color: rgba(34, 34, 34, 0.1);
 	}
 	.navbar-default.affix .navbar-header .navbar-brand {
-		color: #222222;
+		color: #FFFFFF;
 	}
 	.navbar-default.affix .navbar-header .navbar-brand:hover, .navbar-default.affix .navbar-header .navbar-brand:focus {
 		color: #fdcc52;
 	}
 	.navbar-default.affix .nav > li > a, .navbar-default.affix .nav > li > a:focus {
-		color: #222222;
+		color: #FFFFFF;
 	}
 	.navbar-default.affix .nav > li > a:hover, .navbar-default.affix .nav > li > a:focus:hover {
 		color: #fdcc52;
@@ -202,6 +202,10 @@ header .device-container .screen img {
 		font-size: 50px;
 	}
 }
+.screen img {
+	height: 100%;
+	margin: auto;
+}
 section {
 	padding: 100px 0;
 }
@@ -264,14 +268,17 @@ section.features .feature-item i {
 	max-width: 100px;
 }
 section.cta {
-	position: relative;
+	background: #FFFFFF; /* For browsers that do not support gradients */
+	background: -webkit-linear-gradient(left top, #FFFFFF, #E8E8E8); /* For Safari 5.1 to 6.0 */
+	background: -o-linear-gradient(bottom right, #FFFFFF, #E8E8E8); /* For Opera 11.1 to 12.0 */
+	background: -moz-linear-gradient(bottom right, #FFFFFF, #E8E8E8); /* For Firefox 3.6 to 15 */
+	background: linear-gradient(to bottom right, #FFFFFF, #E8E8E8); /* Standard syntax */
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
 	-o-background-size: cover;
 	background-position: center;
-	background-image: url('../img/bg-cta.jpg');
-	padding: 250px 0;
+	padding-top: 100px;
 }
 section.cta .cta-content {
 	position: relative;
@@ -280,67 +287,90 @@ section.cta .cta-content {
 section.cta .cta-content h2 {
 	margin-top: 0;
 	margin-bottom: 25px;
-	color: white;
-	max-width: 450px;
-	font-size: 50px;
+	color: #00A7E1;
+	font-size: 48px;
 }
 @media (min-width: 768px) {
 	section.cta .cta-content h2 {
-		font-size: 80px;
+		font-size: 78px;
 	}
 }
-section.cta .overlay {
-	height: 100%;
-	width: 100%;
-	background-color: rgba(0, 0, 0, 0.5);
-	position: absolute;
-	top: 0;
-	left: 0;
-}
-section.contact {
-	text-align: center;
-}
-section.contact h2 {
+section.cta .cta-content h3 {
 	margin-top: 0;
 	margin-bottom: 25px;
+	color: #00A7E1;
+	max-width: 450px;
+	font-size: 32px;
 }
-section.contact h2 i {
-	color: #dd4b39;
+@media (min-width: 768px) {
+	section.cta .cta-content h3 {
+		font-size: 52px;
+	}
 }
-section.contact ul.list-social {
-	margin-bottom: 0;
+section.cta .cta-content h4 {
+	margin-top: 0;
+	margin-bottom: 25px;
+	color: #00A7E1;
+	max-width: 450px;
+	font-size: 16px;
 }
-section.contact ul.list-social li a {
+@media (min-width: 768px) {
+	section.cta .cta-content h4 {
+		font-size: 26px;
+	}
+}
+.cta .device-container {
+	max-width: 300px;
+	margin: 0 auto 100px;
+}
+
+#mc_embed_signup {
+	background: transparent;
+	clear: left;
+}
+
+label {
+	font-size: 18px;
+	line-height: 1.5;
+	margin-top: 20px;
+	color: #00A7E1;
+}
+
+.field {
+	color: #00A7E1;
+	background: transparent;
+	border-bottom: transparent #00A7E1;
+	width: 50%;
 	display: block;
-	height: 80px;
-	width: 80px;
-	line-height: 80px;
-	font-size: 40px;
-	border-radius: 100%;
+}
+
+.mc-btn-outline {
+	color: #00A7E1;
+	border-color: #2B5CE3;
+	border: 1px solid;
+}
+.mc-btn-outline:hover, .mc-btn-outline:focus, .mc-btn-outline:active, .mc-btn-outline.active {
 	color: white;
+	background-color: #fdcc52;
+	border-color: #fdcc52;
 }
-section.contact ul.list-social li.social-twitter a {
-	background-color: #1da1f2;
+.mc-btn {
+	font-family: 'Lato', 'Helvetica', 'Arial', 'sans-serif';
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	border-radius: 300px;
+	background: none;
 }
-section.contact ul.list-social li.social-twitter a:hover {
-	background-color: #0d95e8;
+.mc-btn-xl {
+	padding: 15px 45px;
+	font-size: 11px;
 }
-section.contact ul.list-social li.social-facebook a {
-	background-color: #3b5998;
-}
-section.contact ul.list-social li.social-facebook a:hover {
-	background-color: #344e86;
-}
-section.contact ul.list-social li.social-google-plus a {
-	background-color: #dd4b39;
-}
-section.contact ul.list-social li.social-google-plus a:hover {
-	background-color: #d73925;
-}
+
+
 footer {
 	background-color: #222222;
 	padding: 25px 0;
-	color: rgba(255, 255, 255, 0.3);
+	color: white;
 	text-align: center;
 }
 footer p {
